fix(application): entities problem and add configuration